# personal_streamlit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
personal_streamlit/: main.py
personal_streamlit/chains/: chat.py
personal_streamlit/db/handlers/: postgres.py
personal_streamlit/db/models/: curriculum.py
personal_streamlit/db/tables/: curriculum.psql
personal_streamlit/handlers/: key_validator.py
personal_streamlit/llm/: openai.py
personal_streamlit/models/: key_info.py
personal_streamlit/scripts/: create_key.py  create_tables.py
personal_streamlit/tools/: encryption.py
tests/: test_main.py
