[tool.poetry]
name = "personal-streamlit"
version = "0.1.0"
description = ""
authors = ["Sebastian Quiñones <ingesql1992@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
python-dotenv = "^1.0.1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
